<resources>
    <string name="app_name">Readnews</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings welcome -->
    <string name="wellcome">Welcome to Read News app !!! </string>

    <!-- Strings related to search -->
    <string name="search_btn">Tìm Kiếm </string>
    <string name="search_et">Nhập từ khóa . . . </string>
    <string name="suggest_btn">Xu hướng </string>

    <!-- Strings related to login -->
    <string name="create_user">Tạo Tài Khoản </string>
    <string name="prompt_email">User </string>
    <string name="prompt_password">Password </string>
    <string name="prompt_name">Họ và Tên</string>
    <string name="action_sign_in">Đăng nhập </string>
    <string name="action_register">Đăng ký</string>
    <string name="error_invalid_email">Tên đăng nhập không chứa kí tự đặc biệt</string>
    <string name="error_invalid_password">Mật khẩu phải nhiều hơn 6 kí tự</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
