<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/search_background"
    tools:context="com.example.legen.readnews.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_et"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/search_btn"
            android:background="#edebeb"
            android:layout_marginLeft="80dp"
            tools:ignore="ButtonStyle,RtlHardcoded" />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/suggest_btn"
            android:background="#edebeb"
            android:layout_marginLeft="10dp"
            tools:ignore="ButtonStyle,RtlHardcoded" />

    </LinearLayout>

</LinearLayout>
